# game

./: .gitignore  AGENTS.md  Makefile  README.md  cabal.project  cabal.project.server  cabal.project.test  flake.nix  run.sh  skills-lock.json  taflhouse.cabal  wrangler.production.toml  wrangler.staging.toml
.github/workflows/: deploy.yml
app/: Main.hs
app/App/: Action.hs  Board.hs  FFI.hs  JSON.hs  Model.hs  Route.hs  Update.hs  View.hs
app/App/Game/: Action.hs  Model.hs  Update.hs  View.hs
app/App/Replay/: Action.hs  Model.hs  Update.hs  View.hs
app/App/Tutorial/: Action.hs  Lessons.hs  Model.hs  Update.hs  View.hs
app/App/Tutorial/Lessons/: Advanced.hs  Beginner.hs  Intermediate.hs  Types.hs
app/App/View/: Auth.hs  Config.hs  Home.hs  Join.hs  Lounge.hs  Profile.hs
server/: Main.hs
server/Server/: Auth.hs  DB.hs  Room.hs
src/Tafl/: AI.hs  Board.hs  Capture.hs  Fort.hs  Game.hs  Move.hs  Protocol.hs  Rules.hs  Surround.hs  Symmetry.hs  Types.hs
src/Tafl/Game/: Board.hs  Capture.hs  Fort.hs  Move.hs  State.hs  Surround.hs  Symmetry.hs
static/: index.html  index.js  sw.js
static/assets/: styles.css
supabase/: config.toml
supabase/functions/send-push/: index.ts
supabase/migrations/: 20260621001400_create_games_table.sql  20260621001500_add_game_features.sql  20260621002000_multiplayer.sql  20260621003000_realtime_multiplayer.sql  20260622000000_public_game_recaps.sql  20260627000000_add_time_controls.sql  20260627000100_add_timeout_cron.sql  20260630000000_add_game_chat.sql  20260702000000_add_glicko2_ratings.sql  20260703000000_add_rematch.sql  20260703000001_add_matchmaking.sql  20260703000002_add_interest_status.sql  20260708000000_add_invite_expiry.sql  20260710000000_add_push_subscriptions.sql
test/: Main.hs
