cabal-version:          3.0
name:                   taflhouse
version:                0.1

library
  hs-source-dirs:       src
  exposed-modules:      Tafl.Types
                      , Tafl.Rules
                      , Tafl.Board
                      , Tafl.Move
                      , Tafl.Capture
                      , Tafl.Fort
                      , Tafl.Surround
                      , Tafl.Symmetry
                      , Tafl.Game
                      , Tafl.AI
  build-depends:        base
                      , containers
                      , vector
                      , text
                      , aeson
  default-language:     GHC2021

executable app
  if !arch(wasm32)
    buildable: False
  else
    cpp-options:
      -DWASM
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  hs-source-dirs:       app
  main-is:              Main.hs
  build-depends:        base, miso, taflhouse, supabase-miso, miso-ui, time, containers, text
  default-language:     GHC2021
  default-extensions:   CPP OverloadedStrings
