cabal-version:          3.0
name:                   taflhouse
version:                0.1

library
  hs-source-dirs:       src
  exposed-modules:      Tafl.Board
                      , Tafl.Rules
                      , Tafl.Game.State
                      , Tafl.Game.Board
                      , Tafl.Game.Move
                      , Tafl.Game.Capture
                      , Tafl.Game.Fort
                      , Tafl.Game.Surround
                      , Tafl.Game.Symmetry
                      , Tafl.Game
                      , Tafl.AI
  build-depends:        base
                      , containers
                      , vector
                      , text
                      , aeson
  default-language:     GHC2021

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:      base, taflhouse, hspec, hedgehog, hspec-hedgehog, vector
  default-language:   GHC2021

executable app
  if !arch(wasm32)
    buildable: False
  else
    cpp-options:
      -DWASM
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        App.JSON
                      , App.Model
                      , App.Action
                      , App.Route
                      , App.FFI
                      , App.Board
                      , App.Update
                      , App.View
                      , App.View.Home
                      , App.View.Auth
                      , App.View.Config
                      , App.View.Profile
                      , App.View.Join
                      , App.Game.Model
                      , App.Game.Action
                      , App.Game.Update
                      , App.Game.View
                      , App.Replay.Model
                      , App.Replay.Action
                      , App.Replay.Update
                      , App.Replay.View
  build-depends:        base, miso, taflhouse, supabase-miso, miso-ui, time, containers, text
  default-language:     GHC2021
  default-extensions:   CPP OverloadedStrings
